2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (floatToInt, doubleToLong): Made static.

	* kaffe/kaffevm/fp.h (doubleToLong, floatToInt): Removed.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (intToFloat):  Simplified collapsing of NaNs.
	Made function static.

	* kaffe/kaffevm/fp.h (FNANBITS, intToFloat): Removed.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (floatAdd, floatSubtract, floatMultiply)
	(floatDivide):  Use KAFFE_JFLOAT_NAN.

	* kaffe/kaffevm/soft.c (soft_cvtdf):  Use KAFFE_JFLOAT_NAN. Documented.

	* kaffe/kaffevm/baseClasses.c (initBaseClasses): Initialize KAFFE_JFLOAT_NAN.

	* kaffe/kaffevm/baseClasses.h (KAFFE_JFLOAT_NAN): New field caching
	java.lang.Float.NaN.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.h (DNANBITS, longToDouble): Removed.

	* kaffe/kaffevm/fp.c (longToDouble): Simplified collapsing of NaNs.
	Made function static.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (doubleAdd, doubleSubtract, doubleMultiply)
	(doubleDivide): Use KAFFE_JDOUBLE_NAN.

	* kaffe/kaffevm/soft.c (soft_cvtfd): Use KAFFE_JDOUBLE_NAN. Documented.

	* kaffe/kaffevm/baseClasses.c (initBaseClasses): Initialize KAFFE_JDOUBLE_NAN.

	* kaffe/kaffevm/baseClasses.h (KAFFE_JDOUBLE_NAN): New field caching
	java.lang.Double.NaN.

2008-02-14  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.h (DISNAN): Removed.

	* kaffe/kaffevm/soft.c (soft_cvtdf, soft_cvtdl, soft_cvtdi),
	kaffe/kaffevm/fp.c (doubleAdd, doubleSubtract, doubleMultiply)
	(doubleDivide): 

2008-02-14  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.h (FISNAN): Removed.

	* kaffe/kaffevm/soft.c (soft_cvtfl, soft_cvtfd, soft_cvtfi), 
	kaffe/kaffevm/fp.c (floatDivide, floatMultiply, floatSubtract)
	(floatAdd): Use isnan instead of FISNAN.
	
2008-02-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/soft.c (soft_fcmpg): Delegate to soft_dcmpg.